Setting base64.js github path

--- a/demo/index.html
+++ b/demo/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <script type='text/javascript' src='base64.js'></script> 
+    <script type='text/javascript' src='https://jgomezpe.github.io/base64/src/base64.js'></script> 
 </head>
 
 <body>   
