--- a/demo/index.html
+++ b/demo/index.html
@@ -18,9 +18,9 @@
 
 
     // You can try any of the previous functions here, we just set the last one as default.
-    document.getElementById('main').innerHTML = "<p>Original base 64 encode text: " + base64 + "</p>" +
-    "<p>decode text: " + decode + "</p>" +
-    "<p>enecode text: " + encode + "</p>"
+    document.getElementById('main').innerHTML = "<p>Original base 64 encode byte array (blob): " + base64 + "</p>" +
+    "<p>decode blob: " + decode + "</p>" +
+    "<p>encode blob: " + encode + "</p>"
 </script>   
 </body>
 
